--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,13 @@
 {
   "files.exclude": {
-    "First server": false,
-    "node_modules/": false,
-    ".vscode/": false,
-    "typings/": false,
-    ".eslint*": false,
-    ".gitignore": false,
-    ".stylelintrc": false,
-    "jsconfig.json": false,
-    "README.md": false,
-    "time.js": false
+    ".vscode/": true,
+    ".eslint*": true,
+    "typings": true,
+    "typings.json": true,
+    ".gitignore": true,
+    ".stylelintrc": true,
+    "jsconfig.json": true,
+    "README.md": true,
+    "Exc": true
   }
 }
