--- a/The app/package.json
+++ b/The app/package.json
@@ -13,6 +13,7 @@
     "url": "https://github.com/MWallin/S_Node_1-Getting-started.git"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "lokijs": "^1.4.1"
   }
 }
