--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
   "files.exclude": {
-    ".vscode/": true,
-    ".eslint*": true,
-    "typings": true,
-    "typings.json": true,
-    ".gitignore": true,
-    ".stylelintrc": true,
-    "jsconfig.json": true,
-    "README.md": true,
-    "Exc": true
+    ".vscode/": false,
+    ".eslint*": false,
+    "typings": false,
+    "typings.json": false,
+    ".gitignore": false,
+    ".stylelintrc": false,
+    "jsconfig.json": false,
+    "README.md": false,
+    "Exc": false
   }
 }
