--- a/The app/package.json
+++ b/The app/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
+    "dotenv-safe": "^2.3.1",
     "express": "^4.14.0",
     "lokijs": "^1.4.1"
   }
